Packages reports. MA-Holder report update

--- a/Report Project1/AllProducts_ProductInformationReport.rdl
+++ b/Report Project1/AllProducts_ProductInformationReport.rdl
@@ -398,28 +398,28 @@ where  (P.id = @ProductId OR @ProductId IS NULL ) and ( P.AspNumber= @AspNo OR @
             <TablixBody>
               <TablixColumns>
                 <TablixColumn>
-                  <Width>2.17708in</Width>
+                  <Width>1.13498in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>2.47787in</Width>
+                  <Width>1.29429in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>2.11328in</Width>
+                  <Width>1.33158in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1.22787in</Width>
+                  <Width>0.84245in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1.79557in</Width>
+                  <Width>1.2921in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>2.53516in</Width>
+                  <Width>1.44141in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>3.37891in</Width>
+                  <Width>1.76in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1.6289in</Width>
+                  <Width>1.26432in</Width>
                 </TablixColumn>
               </TablixColumns>
               <TablixRows>
@@ -869,7 +869,7 @@ where  (P.id = @ProductId OR @ProductId IS NULL ) and ( P.AspNumber= @AspNo OR @
                   </TablixCells>
                 </TablixRow>
                 <TablixRow>
-                  <Height>0.21in</Height>
+                  <Height>0.29333in</Height>
                   <TablixCells>
                     <TablixCell>
                       <CellContents>
@@ -1330,8 +1330,8 @@ where  (P.id = @ProductId OR @ProductId IS NULL ) and ( P.AspNumber= @AspNo OR @
             <DataSetName>DataSet1</DataSetName>
             <Top>0.16959in</Top>
             <Left>0.49954cm</Left>
-            <Height>0.43in</Height>
-            <Width>17.33463in</Width>
+            <Height>0.51333in</Height>
+            <Width>10.36113in</Width>
             <Style>
               <Border>
                 <Style>Solid</Style>
@@ -1362,31 +1362,31 @@ where  (P.id = @ProductId OR @ProductId IS NULL ) and ( P.AspNumber= @AspNo OR @
             <TablixBody>
               <TablixColumns>
                 <TablixColumn>
-                  <Width>2.17709in</Width>
+                  <Width>1.16667in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>2.05903in</Width>
+                  <Width>1.01041in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>2.05903in</Width>
+                  <Width>1.49307in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1.98959in</Width>
+                  <Width>1.62501in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1.61458in</Width>
+                  <Width>1.30554in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1.51042in</Width>
+                  <Width>0.99001in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1.58334in</Width>
+                  <Width>1.19403in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>2.02084in</Width>
+                  <Width>1.57639in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1.85417in</Width>
+                  <Width>1.35416in</Width>
                 </TablixColumn>
                 <TablixColumn>
                   <Width>1.39583in</Width>
@@ -1680,7 +1680,9 @@ where  (P.id = @ProductId OR @ProductId IS NULL ) and ( P.AspNumber= @AspNo OR @
                                   </Style>
                                 </TextRun>
                               </TextRuns>
-                              <Style />
+                              <Style>
+                                <TextAlign>Center</TextAlign>
+                              </Style>
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>Textbox26</rd:DefaultName>
@@ -1733,7 +1735,9 @@ where  (P.id = @ProductId OR @ProductId IS NULL ) and ( P.AspNumber= @AspNo OR @
                                   </Style>
                                 </TextRun>
                               </TextRuns>
-                              <Style />
+                              <Style>
+                                <TextAlign>Center</TextAlign>
+                              </Style>
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>Textbox28</rd:DefaultName>
@@ -2296,7 +2300,9 @@ where  (P.id = @ProductId OR @ProductId IS NULL ) and ( P.AspNumber= @AspNo OR @
                                   <Style />
                                 </TextRun>
                               </TextRuns>
-                              <Style />
+                              <Style>
+                                <TextAlign>Center</TextAlign>
+                              </Style>
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>ApprovalDate</rd:DefaultName>
@@ -2570,7 +2576,7 @@ where  (P.id = @ProductId OR @ProductId IS NULL ) and ( P.AspNumber= @AspNo OR @
             <Top>1.04736in</Top>
             <Left>0.19667in</Left>
             <Height>0.5in</Height>
-            <Width>19.26391in</Width>
+            <Width>14.11112in</Width>
             <ZIndex>1</ZIndex>
             <Style>
               <Border>
@@ -2900,40 +2906,40 @@ where  (P.id = @ProductId OR @ProductId IS NULL ) and ( P.AspNumber= @AspNo OR @
             <TablixBody>
               <TablixColumns>
                 <TablixColumn>
-                  <Width>1.30555in</Width>
+                  <Width>1.0243in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1.64582in</Width>
+                  <Width>1.29207in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1.74308in</Width>
+                  <Width>1.27045in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1.70833in</Width>
+                  <Width>0.63541in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1.82292in</Width>
+                  <Width>1.40319in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1.96528in</Width>
+                  <Width>1.71139in</Width>
                 </TablixColumn>
                 <TablixColumn>
                   <Width>1.52431in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>2.01041in</Width>
+                  <Width>1.81249in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1.78125in</Width>
+                  <Width>1.1875in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>2.13541in</Width>
+                  <Width>1.37499in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1.5625in</Width>
+                  <Width>1.05208in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1.66667in</Width>
+                  <Width>1.13542in</Width>
                 </TablixColumn>
                 <TablixColumn>
                   <Width>1in</Width>
@@ -3436,7 +3442,9 @@ where  (P.id = @ProductId OR @ProductId IS NULL ) and ( P.AspNumber= @AspNo OR @
                                   </Style>
                                 </TextRun>
                               </TextRuns>
-                              <Style />
+                              <Style>
+                                <TextAlign>Center</TextAlign>
+                              </Style>
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>Textbox88</rd:DefaultName>
@@ -3489,7 +3497,9 @@ where  (P.id = @ProductId OR @ProductId IS NULL ) and ( P.AspNumber= @AspNo OR @
                                   </Style>
                                 </TextRun>
                               </TextRuns>
-                              <Style />
+                              <Style>
+                                <TextAlign>Center</TextAlign>
+                              </Style>
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>Textbox93</rd:DefaultName>
@@ -3542,7 +3552,9 @@ where  (P.id = @ProductId OR @ProductId IS NULL ) and ( P.AspNumber= @AspNo OR @
                                   </Style>
                                 </TextRun>
                               </TextRuns>
-                              <Style />
+                              <Style>
+                                <TextAlign>Center</TextAlign>
+                              </Style>
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>Textbox94</rd:DefaultName>
@@ -4095,7 +4107,9 @@ where  (P.id = @ProductId OR @ProductId IS NULL ) and ( P.AspNumber= @AspNo OR @
                                   <Style />
                                 </TextRun>
                               </TextRuns>
-                              <Style />
+                              <Style>
+                                <TextAlign>Center</TextAlign>
+                              </Style>
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>NextPSURperiod1</rd:DefaultName>
@@ -4195,7 +4209,9 @@ where  (P.id = @ProductId OR @ProductId IS NULL ) and ( P.AspNumber= @AspNo OR @
                                   <Style />
                                 </TextRun>
                               </TextRuns>
-                              <Style />
+                              <Style>
+                                <TextAlign>Center</TextAlign>
+                              </Style>
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>DeletionOfApproval1</rd:DefaultName>
@@ -4283,7 +4299,7 @@ where  (P.id = @ProductId OR @ProductId IS NULL ) and ( P.AspNumber= @AspNo OR @
                   </TablixCells>
                 </TablixRow>
                 <TablixRow>
-                  <Height>0.39583in</Height>
+                  <Height>0.06597in</Height>
                   <TablixCells>
                     <TablixCell>
                       <CellContents>
@@ -4297,6 +4313,10 @@ where  (P.id = @ProductId OR @ProductId IS NULL ) and ( P.AspNumber= @AspNo OR @
                               <Value>=Fields!Id.Value</Value>
                             </Parameter>
                           </Parameters>
+                          <Visibility>
+                            <Hidden>true</Hidden>
+                            <ToggleItem>Land</ToggleItem>
+                          </Visibility>
                           <Style>
                             <Border>
                               <Style>None</Style>
@@ -4357,8 +4377,8 @@ where  (P.id = @ProductId OR @ProductId IS NULL ) and ( P.AspNumber= @AspNo OR @
             <DataSetName>CountrySpecificInformation</DataSetName>
             <Top>5.85986in</Top>
             <Left>0.19667in</Left>
-            <Height>0.89583in</Height>
-            <Width>21.87154in</Width>
+            <Height>0.56597in</Height>
+            <Width>16.42361in</Width>
             <ZIndex>8</ZIndex>
             <Style>
               <Border>
@@ -4839,13 +4859,13 @@ where  (P.id = @ProductId OR @ProductId IS NULL ) and ( P.AspNumber= @AspNo OR @
             <TablixBody>
               <TablixColumns>
                 <TablixColumn>
-                  <Width>3.5625in</Width>
+                  <Width>2.17709in</Width>
                 </TablixColumn>
                 <TablixColumn>
                   <Width>2.71875in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>3.90973in</Width>
+                  <Width>2.67015in</Width>
                 </TablixColumn>
                 <TablixColumn>
                   <Width>1.21875in</Width>
@@ -5294,7 +5314,7 @@ where  (P.id = @ProductId OR @ProductId IS NULL ) and ( P.AspNumber= @AspNo OR @
             <Top>4.49528in</Top>
             <Left>0.19667in</Left>
             <Height>0.5in</Height>
-            <Width>11.40974in</Width>
+            <Width>8.78474in</Width>
             <ZIndex>10</ZIndex>
             <Style>
               <Border>
@@ -5303,7 +5323,7 @@ where  (P.id = @ProductId OR @ProductId IS NULL ) and ( P.AspNumber= @AspNo OR @
             </Style>
           </Tablix>
         </ReportItems>
-        <Height>7.93625in</Height>
+        <Height>6.61333in</Height>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -5330,10 +5350,10 @@ where  (P.id = @ProductId OR @ProductId IS NULL ) and ( P.AspNumber= @AspNo OR @
           </RightBorder>
         </Style>
       </Body>
-      <Width>22.14112in</Width>
+      <Width>17.02653in</Width>
       <Page>
         <PageHeader>
-          <Height>4.73287cm</Height>
+          <Height>4.15079cm</Height>
           <PrintOnFirstPage>true</PrintOnFirstPage>
           <PrintOnLastPage>true</PrintOnLastPage>
           <ReportItems>
@@ -5575,6 +5595,8 @@ where  (P.id = @ProductId OR @ProductId IS NULL ) and ( P.AspNumber= @AspNo OR @
             </Border>
           </Style>
         </PageFooter>
+        <PageHeight>8.5in</PageHeight>
+        <PageWidth>14in</PageWidth>
         <LeftMargin>1in</LeftMargin>
         <RightMargin>1in</RightMargin>
         <TopMargin>1in</TopMargin>
@@ -5587,6 +5609,11 @@ where  (P.id = @ProductId OR @ProductId IS NULL ) and ( P.AspNumber= @AspNo OR @
     <ReportParameter Name="ProductId">
       <DataType>Integer</DataType>
       <Nullable>true</Nullable>
+      <DefaultValue>
+        <Values>
+          <Value>612</Value>
+        </Values>
+      </DefaultValue>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
     <ReportParameter Name="AspNo">
